MAINTAINERCLEANFILES = Makefile.in

EXTRA_DIST = $(bind_DATA) Imakefile README

binddir = @XMBINDDIR_FALLBACK@

bind_DATA = \
	xmbind.alias \
	acorn \
	apollo \
	dec \
	dg_AViiON \
	doubleclick \
	hal \
	hitachi \
	hp \
	ibm \
	intergraph \
	intergraph17 \
	megatek \
	motorola \
	ncr_at \
	ncr_vt \
	pc \
	sgi \
	sni \
	sni_97801 \
	siemens_9733 \
	siemens_wx200 \
	sony \
	sun \
	sun_at \
	tek
