MAINTAINERCLEANFILES = Makefile.in

EXTRA_DIST = Imakefile Amoeba.cf Amoeba.cf apollo.cf bsd.cf bsdi.cf \
   	     bsdLib.rules bsdLib.tmpl cde.rules cde.tmpl convex.cf cray.cf \
	     darwin.cf darwinLib.rules darwinLib.tmpl DGUX.cf FreeBSD.cf \
	     fujitsu.cf generic.cf gnu.cf gnuLib.rules \
	     gnuLib.tmpl host.def hp.cf hpLib.rules hpLib.tmpl ibm.cf \
	     ibmLib.rules ibmLib.tmpl Imake.cf Imakefile Imake.rules \
	     Imake.tmpl isc.cf Library.tmpl Amoeba.cf apollo.cf bsd.cf \
	     bsdi.cf bsdLib.rules bsdLib.tmpl cde.rules cde.tmpl convex.cf \
	     cray.cf DGUX.cf FreeBSD.cf fujitsu.cf generic.cf gnu.cf \
	     gnuLib.rules gnuLib.tmpl host.def hp.cf hpLib.rules hpLib.tmpl \
	     ibm.cf ibmLib.rules ibmLib.tmpl Imake.cf Imakefile Imake.rules \
	     Imake.tmpl isc.cf Library.tmpl linux.cf lnxdoc.rules \
	     lnxdoc.tmpl lnxLib.rules lnxLib.tmpl luna.cf lynx.cf mach.cf \
	     macII.cf Makefile.am minix.cf Mips.cf Motif.rules Motif.tmpl \
	     moto.cf ncr.cf nec.cf necLib.rules necLib.tmpl NetBSD.cf \
	     noop.rules nto.cf nto.rules Oki.cf oldlib.rules OpenBSD.cf \
	     os2.cf os2Lib.rules os2Lib.tmpl os2.rules osf1.cf osfLib.rules \
	     osfLib.tmpl pegasus.cf QNX.cf QNX.rules README sco5.cf sco.cf \
	     scoLib.rules sequent.cf ServerLib.tmpl Server.tmpl sgi.cf \
	     sgiLib.rules sgiLib.tmpl site.def sony.cf sun.cf sunLib.rules \
	     sunLib.tmpl sv3Lib.rules sv3Lib.tmpl sv4Lib.rules sv4Lib.tmpl \
	     svr3.cf svr4.cf Threads.tmpl ultrix.cf usl.cf Win32.cf \
	     Win32.rules WinLib.tmpl X11.rules X11.tmpl x386.cf xf86.rules \
	     xf86site.def xf86.tmpl xfree86.cf 
