MAINTAINERCLEANFILES = Makefile.in

EXTRA_DIST = Imakefile aminstall.sh bsdinst.sh checktree.c chownxterm.c \
	     crayar.sh elistgen.hp elistgen.ibm elistgen.sun elistgen.usl \
	     install.sh lndir.c lndir.man Makefile.in makeg.man makeg.sh \
	     makestrs.c makestrs.man mdepend.cpp mergelib.cpp \
	     mkdirhier.man mkdirhier.sh mkshadow syminst.sh x11mf.sh \
	     xmkmf.cpp xmkmf.man Makefile.ini

INCLUDES = ${X_CFLAGS}
noinst_PROGRAMS = makestrs


