MAINTAINERCLEANFILES = Makefile.in

SUBDIRS = airport \
         animate \
         drag_and_drop \
         draw \
         earth \
         filemanager \
         fileview \
         getsubres \
         hellomotif \
         i18ninput \
         panner \
         periodic \
         piano \
         popups \
         sampler2_0 \
         setdate \
         Exm \
         todo \
         workspace \
         hellomotifi18n \
         tooltips \
         ButtonBox \
         Column \
         FontSel \
         Outline \
         TabStack \
         Tree \
         ColorSel \
         Combo2 \
         Ext18List \
         IconB \
         Paned \
         pixmaps

EXTRA_DIST = Imakefile

