MAINTAINERCLEANFILES = Makefile.in

SUBDIRS =   dainput \
            hellomotif \
            xmapdef \
            xmfonts \
            xmforc \
            xmform \
            Exm \
            aicon \
            dogs \
            uilsymdump \
            motifshell 

EXTRA_DIST = Imakefile

